@@ -34,6 +34,7 @@
 <!ENTITY faq "<acronym>FAQ</acronym>">
 <!ENTITY gui "<acronym>GUI</acronym>">
 <!ENTITY html "<acronym>HTML</acronym>">
+<!ENTITY idb "<acronym>IDB</acronym>">
 <!ENTITY mime "<acronym>MIME</acronym>">
 <!ENTITY rdbms "<acronym>RDBMS</acronym>">
 <!ENTITY sql "<acronym>SQL</acronym>">
